edited footer and disclaimer

--- a/index.html
+++ b/index.html
@@ -641,12 +641,12 @@
         </div>
 
         <div class="copyright text-center">
-            &copy; 2022 UI UX HTML CSS BS: Evan, Cecilia, Justin.<br>
-            &copy; 2022 JS: name, name, name, name...<br>
-            All Rights Reserved.
+            &copy; 2022 UI UX Sprint1: Evan, Cecilia, Justin<br>
+            &copy; 2022 JS Sprint2: name, name, name, name<br>
+            &copy; 2022 The Walt Disney Company<br>
+            All Rights Reserved.<br>
+            Disclaimer: This website / page is for educational purposes only.<br>
         </div>
-        
-        
     </footer>
 
 
